# project

./: .env  .env_  Dockerfile  alembic.ini  config.py  log.txt  main.py  pyproject.toml  requirements.txt  test02.db
files/: index.html
files/OLD/: goods.py  main_.py  main__.py  simlpe.py
migrations/: env.py
migrations/versions/: 2023_12_20_1641-1c035a00f775_db_new_tables.py  2023_12_20_1645-aad1e1615399_db_new_filds.py  2024_04_07_1704-e0c8d10059ba_.py
models/: good.py  users.py
public/: db.py  router_users.py
